compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__ambiguous_type_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1758
expression: "import foo; pub type Thing { Thing }; \n        pub fn main() { \n            [Thing] == [foo.Thing]; \n        }"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:24
  │
3 │             [Thing] == [foo.Thing]; 
  │                        ^^^^^^^^^^^

Expected type:

    List(Thing)

Found type:

    List(foo.Thing)

